Fix: scrolling right overflows on to the index

--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ vellum-doc {
 }
 
 #document {
+  overflow: hidden;
   padding-top: 2em;
   padding-left: 0;
   padding-right: 2em;
